--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,9 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
 
-
+ead Only by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -2845,6 +2847,7 @@ input, select, textarea {
 		#footer .copyright {
 			line-height: 1em;
 			list-style: none;
+			text-decoration: none;
 			padding: 0;
 		}
 
